# VideoToBookStory

./: .gitignore  README.md  TECH_ARCHITECTURE.md  pyproject.toml
src/videotobookstory/: __init__.py  main.py  web.py
tests/: test_story_logic.py  test_web_exports.py
